2006-07-03  Christian Neumair  <chris@gnome-de.org>

	* po/Makefile.in.in: Remove from CVS. Fixes #7255.
	Thanks to Christian Persch <chpe@gnome.org>.

2006-07-03  Christian Neumair  <chris@gnome-de.org>

	* fredesktop.org.xml.in: Add VHDL MIME type. Fixes #7329.
	Thanks to George Jenkins <gvj11@student.canterbury.ac.nz>.

2006-07-03  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: Add application/powerpoint and
	application/mspowerpoint as PPT alias. Fixes #7407.
	Thanks to Frederic Crozat <fcrozat@mandriva.com>.

=== shared-mime-info 0.18 ===

2006-07-03  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 0.18

2006-06-19  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: *.mpga is also a pattern for MP3
	(Closes GNOME #345306)

2006-05-14  Bastien Nocera  <hadess@hadess.net>

	* .cvsignore: upd

2006-05-14  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: add support for XSPF version 1 playlists
	(see http://www.xspf.org/specs/)

2006-05-14  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: patch from Stanislav Brabec <sbrabec@suse.cz>
	to clarify C, C++, C# and ObjC headers and sources (Closes: #6743)

2006-05-09  Christian Neumair  <chris@gnome-de.org>

	* freedesktop.org.xml.in: lower priority of "%" magic patterns to 10.

2006-04-19  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: .wax is a suffix for ASX playlists as well

2006-04-18  Bastien Nocera  <hadess@hadess.net>

	* configure.in: Remove "no" from ALL_LINGUAS

2006-04-16  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Make audio/x-ms-asx's magic higher priority
	than HTML to avoid matching HTML on "<TITLE" present in an ASX file
	(Closes GNOME #338328 and #338515)

2006-04-14  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: .asx files are of audio/x-ms-asx, not ASF
	files

2006-04-05  Christian Neumair  <chris@gnome-de.org>
