@@ -1,3 +1,8 @@
+2006-07-09  Bastien Nocera  <hadess@hadess.net>
+
+	* freedesktop.org.xml.in: add application/mbox for the MBOX mailboxes
+	(Closes: #2052)
+
 2006-07-03  Christian Neumair  <chris@gnome-de.org>
 
 	* po/Makefile.in.in: Remove from CVS. Fixes #7255.
